<resources>

    <!--Global-->
    <string name="app_name">HikeTracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_locator">Map</string>
    <string name="title_activity_hike">HikeActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_newuser">New User</string>

    <!--HikeActivity-->
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="manualEntryHistoryBttnTxt">Enter in New Hike</string>

    <!--NewUserActivity-->
    <string name="nameQueryLabel">What is your name?</string>
    <string name="submitButtonLabel">Submit</string>
    <string name="title_activity_hike_dialog_fragment">HikeDialogFragmentActivity</string>
    <string name="title_activity_save_hike_data">SaveHikeData</string>

    <!-- Passing Parcel String Keys -->
    <string name="passHikeData">Hike Data Parcel</string>
    <string name="passUser">User Parcel</string>
    <string name="passMountain">Mountain Parcel</string>
    <string name="sourceString">Source Strings</string>
    <string name="editString">Edit Strings</string>
    <string name="newString">New Strings</string>
    <string name="updateBttnLabel">Update</string>
    <string name="deleteBttnLabel">DELETE</string>
    <string name="chosePeakLabel">Choose Peak!</string>
    <string name="defaultHikeDateLabel">Hike Date: xx/xx/xx</string>
    <string name="defaultHikeLengthLabel">Hike Length: 00:00:00</string>
    <string name="saveBttnLabel">Save</string>
    <string name="cancelBttnLabel">Cancel</string>
    <string name="pickMountainLabel">Pick Mountain</string>
    <string name="pickDateLabel">Pick Date</string>
    <string name="pickNameLabel">Pick Time</string>
    <string name="colonLabel">:</string>
    <string name="reviewBttnLabel">Review Hike Data</string>
    <string name="cancelHikeBttnLabel">Exit Without Saving</string>
    <string name="nothingYetLabel">Nothing yet</string>

</resources>
